# vectorfoil

./: .gitignore  Cargo.toml  README.md
benches/: basic.rs
examples/: basic.rs  clip_z.rs  cube.rs  line.rs
src/: common.rs  intersect.rs  lib.rs  primitive.rs  render_paths.rs  renderer.rs
tests/: clipping.rs  split_tri.rs
