[package]
name = "vectorfoil"
version = "0.1.0"
authors = ["Mason Smith <masonium@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "*"
nalgebra-glm = "*"
ncollide2d = "*"
art-util = { path = "/home/mason/workspace/art-util" }
svg = "*"

[dev-dependencies]
assert_approx_eq = "*"
criterion = "*"

[[bench]]
name = "basic"
harness = false
